Improving connections view